--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" type="image/png" href="./src/assets/favicon-1.webp" />
+    <title>Inside Unlimited</title>
   </head>
   <body>
     <div id="root"></div>
