--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./src/assets/favicon-1.webp" />
+    <link rel="icon" type="image/png" href="./src/assets/favicon-1.jpeg" />
     <title>Inside Unlimited</title>
   </head>
   <body>
